--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
   sassdoc-path="sassdoc.json"
   dependencies='[
     "https://github.com/PredixDev/px-widths-design",
-    "https://github.com/inuitcss/tools.responsive"
+    "https://github.com/PredixDev/px-helpers-design"
   ]'
   selected-options="{{selectedOptions}}">
 
@@ -64,11 +64,9 @@
 <section data-slot="usage">
 The Predix UI Widths Responsive module is an extension of the default [px-widths-design](https://predix-ui.com/#/px-widths-design) module and provides breakpoint-based classes for widths on elements. This module is a fork of InuitCSS's [widths-responsive](https://github.com/inuitcss/trumps.widths-responsive) module.
 
-The Widths Responsive module loops through the breakpoints defined in InuitCSS's [settings.responsive](https://github.com/inuitcss/settings.responsive) to generate prefixed breakpoint-based classes. If you are using InuitCSS's default breakpoints, you will be given classes like `u-1/4-lap-and-up`, or `u-1-of-2-desk`, etc.
+The Widths Responsive module loops through the breakpoints defined in px-helper-design's [$breakpoints list](https://github.com/PredixDev/px-helpers-design) to generate prefixed breakpoint-based classes. If you are using the default breakpoints, you will be given classes like `u-1/4-lap-and-up`, or `u-1-of-2-desk`, etc.
 
 Widths Responsive will inherit the same settings used for the Widths module (i.e. namespaces and fraction vs. spoken-word format).
-
-Based on the breakpoints defined in the `$breakpoints` Sass list, then widths determined by classes in your markup will be triggered.
 
 For example, with a `$breakpoint` named `desk` (which defines a media-query for viewports wider than 1024 pixels), the class `.u-1/2-desk` would apply a width of 50% on an element with a viewport above 1024 pixels. At narrower viewports `.u-1/2-desk` would be ignored and has no effect.
 
@@ -122,10 +120,10 @@ Classes can be combined to define the responsive behavior of a component based o
 
     _divClasses: function() {
       var opts = this.selectedOptions || {}, classString = "";
-      if(opts.Width === "whole")     classString = "u-1/1-"; 
-      if(opts.Width === "half")      classString = "u-1/2-"; 
-      if(opts.Width === "third")     classString = "u-1/3-"; 
-      if(opts.Width === "quarter")   classString = "u-1/4-"; 
+      if(opts.Width === "whole")     classString = "u-1/1-";
+      if(opts.Width === "half")      classString = "u-1/2-";
+      if(opts.Width === "third")     classString = "u-1/3-";
+      if(opts.Width === "quarter")   classString = "u-1/4-";
       if(opts.Width === "sixth")     classString = "u-1/6-";
       this.widthString = opts.Width;
       return classString += opts.Breakpoint;
