runtime theming for demo

--- a/demo/px-widths-responsive-design-demo.html
+++ b/demo/px-widths-responsive-design-demo.html
@@ -6,7 +6,7 @@
   <link rel="import" href="../css/px-widths-responsive-design-demo-styles.html" />
 
 <!-- Demo DOM module -->
-<dom-module id="local-element-demo">
+<dom-module id="px-widths-responsive-design-demo">
   <template>
   <!-- 0: Import the styles-->
   <style include="px-widths-responsive-design-demo-styles" is="custom-style"></style>
@@ -99,7 +99,7 @@ Classes can be combined to define the responsive behavior of a component based o
 <!-- 6: Handle selectedOptions, update demo -->
 <script>
   Polymer({
-    is: 'local-element-demo',
+    is: 'px-widths-responsive-design-demo',
 
     attached : function(){
       var boundHandler = this._handleOptionsUpdated.bind(this);
